syntax = "proto3";

package subscription;

service SubscriptionService {
    rpc CheckUserBalance(UserId) returns (UserBalance);
    rpc UpdateUserBalance(UserBalanceUpdate) returns (UserBalance);
}

message UserId {
    string userId = 1;
}

message UserBalance {
    int64 amount = 1;
    int64 multiplier = 2;
    string currency = 3;
}

message UserBalanceDelta {
    int64 amount = 1;
    int64 multiplier = 2;
    string currency = 3;
}

message UserBalanceUpdate {
    string userId = 1;
    UserBalanceDelta delta = 2;
}